<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>History</class>
 <widget class="QDialog" name="History">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>531</width>
    <height>360</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Вибір графіків</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0" colspan="2">
    <widget class="QFrame" name="frame">
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QFrame" name="frame_Reg">
        <property name="frameShape">
         <enum>QFrame::Panel</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Sunken</enum>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
            <string>Технологія</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_10cf1">
           <property name="text">
            <string>Центрифуга №1</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_20cf2">
           <property name="text">
            <string>Центрифуга №2</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_30cf3">
           <property name="text">
            <string>Центрифуга №3</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_40cf4">
           <property name="text">
            <string>Центрифуга №4</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_50cf5">
           <property name="text">
            <string>Центрифуга №5</string>
           </property>
          </widget>
         </item>
         <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
             <height>71</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </widget>
      </item>
      <item>
       <widget class="QFrame" name="frame_Val">
        <property name="frameShape">
         <enum>QFrame::Panel</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Sunken</enum>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Привод</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_10drv1">
           <property name="text">
            <string>Центрифуга №1</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_20drv2">
           <property name="text">
            <string>Центрифуга №2</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_30drv3">
           <property name="text">
            <string>Центрифуга №3</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_40drv4">
           <property name="text">
            <string>Центрифуга №4</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Cf_50drv5">
           <property name="text">
            <string>Центрифуга №5</string>
           </property>
          </widget>
         </item>
         <item>
          <spacer name="verticalSpacer_2">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
             <height>145</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </widget>
      </item>
      <item>
       <widget class="QFrame" name="frame_Other">
        <property name="frameShape">
         <enum>QFrame::Panel</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Sunken</enum>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
          <widget class="QPushButton" name="trend0trend6">
           <property name="text">
            <string>Параметри</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="trend0shib6">
           <property name="text">
            <string> Шибер</string>
           </property>
          </widget>
         </item>
         <item>
          <spacer name="verticalSpacer_3">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
             <height>145</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <spacer name="horizontalSpacer">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>294</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="1" column="1">
    <widget class="QPushButton" name="Exit">
     <property name="text">
      <string>Вихід</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>Exit</sender>
   <signal>clicked()</signal>
   <receiver>History</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>353</x>
     <y>276</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
